# eie_nrf52840

./: .gitignore  CMakeLists.txt  cnv_to_bit.py  pasteL_bg-converted.txt  random_test-converted.txt  shamess-converted.txt
app/: CMakeLists.txt  prj.conf
app/boards/: nrf52840dk_nrf52840.overlay
app/src/: backup3.c  backup4_1.c  main.c  my_state_machine.c  my_state_machine.h
doc/2_Version_Control/: git_cheatsheet.txt
drivers/: CMakeLists.txt
drivers/J_ASSETS/: CMakeLists.txt  J_ASSETS.h  j_assets.c
drivers/J_GL/: CMakeLists.txt  J_GL.h  j_gl.c
drivers/LED/: LED.h
